# istari-lens

./: .dockerignore  .editorconfig  .env.example  .gcloudignore  .gitignore  ANALISE_ASSISTENTE.md  ARCHITECTURE.md  CHECKLIST.md  DATASET_BASE_QUERYSPEC_SPEC.md  DEPLOYMENT.md  DEPLOY_GCP_CLOUD_RUN.md  FAQ.md  LENS_IMPORTED_DATASET_BACKEND_SPEC.md  Makefile  PLANO_TECNICO_ASSISTENTE_LENS.md  README.md  SUMMARY.md  TESTING.md  WORKSPACES_ARCHITECTURE_SPEC.md  cloudbuild.deploy.yaml  cloudbuild.images.yaml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: .env.example  ARCHITECTURE_REFACTOR_PLAN.md  Dockerfile  LENS_BI_AGENT.md  LENS_MCP_TOOLS.md  LENS_OPENAI_AUDIT.md  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requests.http
apps/api/alembic/: env.py  script.py.mako
apps/api/app/: auth.py  crypto.py  dashboard_execution.py  database.py  dependencies.py  external_query_logging.py  models.py  query_builder.py  schemas.py  settings.py  widget_config.py
apps/api/tests/: conftest.py  test_admin_users_router.py  test_api_config_router.py  test_auth_e2e.py  test_basic.py  test_bi_agent.py  test_bi_agent_answer_synthesis.py  test_bi_agent_conversation_memory.py  test_bi_agent_conversation_policy.py  test_bi_agent_golden_suite.py  test_bi_agent_intent_taxonomy.py  test_bi_agent_result_interpreter.py  test_bi_agent_semantic_evidence.py  test_bi_agent_value_formatting.py  test_catalog_router.py  test_dashboard_ai_generation_service.py  (+19 more)
apps/engine/: Dockerfile  README.md  main.py  pyproject.toml
(+324 files in other folders)
