[tool.poetry]
name = "istari-api"
version = "0.1.0"
description = "Istari Lens Analytics API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
psycopg = {extras = ["binary"], version = "^3.1.12"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.28.1"
pyjwt = "^2.8.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cryptography = "^41.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
ruff = "^0.1.8"
black = "^23.12.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
